# prisma-rs

./: .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml  llms.txt
cross-compat/src/: lib.rs
cross-compat/tests/: golden.rs
cross-compat/tests/snapshots/: golden__golden_aggregate_sqlite.snap  golden__golden_create_many_sqlite.snap  golden__golden_create_one_sqlite.snap  golden__golden_delete_many_pg.snap  golden__golden_delete_many_sqlite.snap  golden__golden_delete_one_mysql.snap  golden__golden_delete_one_sqlite.snap  golden__golden_find_first_mysql.snap  golden__golden_find_first_pg.snap  golden__golden_find_many_order_by_sqlite.snap  golden__golden_find_many_sqlite.snap  golden__golden_find_many_with_relation_pg.snap  golden__golden_find_unique_mysql.snap  golden__golden_find_unique_pg.snap  golden__golden_group_by_pg.snap  golden__golden_group_by_sqlite.snap  golden__golden_update_many_pg.snap  golden__golden_update_many_sqlite.snap  golden__golden_update_one_mysql.snap  golden__golden_update_one_pg.snap  golden__golden_upsert_one_mysql.snap
docs/: architecture.md  migration-plan.md  phase1-database-drivers.md  phase6-test-hardening.md  phases.md  tasks.md
docs/components/: cross-compat.md  driver-adbc.md  driver-core.md  driver-duckdb.md  driver-flightsql.md  driver-mysql.md  driver-pg.md  driver-sqlite.md  prisma-cli.md  prisma-client.md  prisma-codegen.md  prisma-compiler.md  prisma-error.md  prisma-ir.md  prisma-migrate.md  prisma-schema.md  query-executor.md
driver-adbc/: Cargo.toml
driver-adbc/src/: arrow.rs  error.rs
driver-core/src/: database_url.rs  error.rs  lib.rs  sql_commenter.rs  static_sql.rs  traits.rs  types.rs  user_facing_error.rs
driver-duckdb/src/: adapter.rs  lib.rs
driver-flightsql/: Cargo.toml
driver-flightsql/src/: lib.rs
driver-mysql/: Cargo.toml
driver-mysql/src/: adapter.rs  conversion.rs  error.rs  lib.rs
driver-mysql/tests/: integration.rs
driver-pg/src/: error.rs  lib.rs
driver-sqlite/: Cargo.toml
driver-sqlite/tests/: integration.rs
prisma-cli/: Cargo.toml
prisma-cli/src/: config.rs  error.rs  main.rs
prisma-cli/src/commands/: db_execute.rs  db_pull.rs  db_push.rs  format.rs  migrate_dev.rs  migrate_diff.rs  migrate_reset.rs  validate.rs
prisma-cli/tests/: cli.rs
prisma-client/: Cargo.toml
prisma-client/src/: query.rs  selection.rs  transaction.rs
prisma-client/tests/: integration.rs
prisma-codegen/src/: gen_rust.rs  schema_ir.rs
prisma-codegen/tests/: discrepancy.rs
prisma-compiler/: Cargo.toml
prisma-engines/query-compiler/query-compiler/src/: data_mapper.rs  expression.rs  lib.rs
prisma-error/: Cargo.toml
prisma-error/src/: lib.rs
prisma-ir/: Cargo.toml
prisma-ir/src/: expression.rs  query.rs  result_node.rs  rule.rs  value.rs
prisma-migrate/src/: lib.rs
prisma-rs/: Makefile  README.md
prisma-rs/.github/workflows/: ci.yml
prisma-rs/cross-compat/: Cargo.toml
prisma-rs/cross-compat/tests/snapshots/: golden__golden_aggregate_mysql.snap  golden__golden_aggregate_pg.snap  golden__golden_create_many_mysql.snap  golden__golden_create_many_pg.snap  golden__golden_create_one_mysql.snap  golden__golden_create_one_pg.snap  golden__golden_delete_one_pg.snap  golden__golden_find_many_mysql.snap  golden__golden_find_many_order_by_mysql.snap  golden__golden_find_many_order_by_pg.snap  golden__golden_find_many_pagination_mysql.snap  golden__golden_find_many_pagination_pg.snap  golden__golden_find_many_pg.snap  golden__golden_find_many_with_relation_mysql.snap  golden__golden_find_many_with_relation_sqlite.snap  golden__golden_group_by_mysql.snap  golden__golden_update_one_sqlite.snap  golden__golden_upsert_one_pg.snap  golden__golden_upsert_one_sqlite.snap
prisma-rs/docs/: architecture.md  getting-started.md
prisma-rs/driver-adbc/src/: adapter.rs  lib.rs
prisma-rs/driver-adbc/tests/: integration_duckdb.rs
prisma-rs/driver-core/: Cargo.toml
prisma-rs/driver-core/src/: safe_message.rs
prisma-rs/driver-duckdb/: Cargo.toml
prisma-rs/driver-duckdb/src/: conversion.rs  error.rs
prisma-rs/driver-flightsql/src/: adapter.rs  error.rs
prisma-rs/driver-pg/: Cargo.toml
prisma-rs/driver-pg/src/: adapter.rs  conversion.rs
prisma-rs/driver-pg/tests/: integration.rs
prisma-rs/driver-sqlite/src/: adapter.rs  conversion.rs  error.rs  lib.rs
prisma-rs/prisma-cli/src/commands/: generate.rs  migrate_deploy.rs  migrate_resolve.rs  mod.rs
prisma-rs/prisma-client/src/: accelerate.rs  client.rs  error.rs  extensions.rs  lib.rs  logging.rs  middleware.rs
prisma-rs/prisma-client/tests/: e2e_sqlite.rs
prisma-rs/prisma-codegen/: Cargo.toml
prisma-rs/prisma-codegen/src/: error.rs  gen_rust.rs  gen_typescript.rs  lib.rs  schema_ir.rs
prisma-rs/prisma-compiler/src/: lib.rs
prisma-rs/prisma-ir/src/: lib.rs
prisma-rs/prisma-migrate/: Cargo.toml
prisma-rs/prisma-schema/: Cargo.toml
prisma-rs/prisma-schema/src/: lib.rs
prisma-rs/query-executor/: Cargo.toml
prisma-rs/query-executor/src/: data_map.rs  lib.rs  render.rs  value.rs
prisma-rs/query-executor/tests/: integration.rs
prisma-rs/scripts/: install-hooks.sh
prisma-schema/src/: error.rs  ops.rs
query-executor/src/: error.rs  interpret.rs  scope.rs
query-executor/tests/: integration_mysql.rs  integration_pg.rs
scripts/: pre-commit  scan_prisma_tests.py  sync-public.sh
