[package]
name = "prisma-driver-sqlite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prisma-driver-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rust_decimal.workspace = true

[lints]
workspace = true
