[package]
name = "prisma-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Prisma CLI - schema management, code generation, and migrations"

[[bin]]
name = "prisma"
path = "src/main.rs"

[dependencies]
prisma-schema = { path = "../prisma-schema" }
prisma-codegen = { path = "../prisma-codegen" }
prisma-migrate = { path = "../prisma-migrate" }

clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
