[package]
name = "prisma-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime library for Prisma Rust and TypeScript clients"

[dependencies]
prisma-driver-core.workspace = true
prisma-compiler = { path = "../prisma-compiler" }
prisma-query-executor = { path = "../query-executor" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
prisma-driver-sqlite = { path = "../driver-sqlite" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
