[package]
name = "prisma-ir"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Owned intermediate representation types for Prisma query plans"

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2", features = ["serde"] }
base64.workspace = true

[lints]
workspace = true
