[package]
name = "prisma-driver-duckdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prisma-driver-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt"] }
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
duckdb = { version = "1.4", features = ["bundled"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
