[package]
name = "prisma-schema"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prisma-fmt = { git = "https://github.com/prisma/prisma-engines.git", rev = "94a226b" }
psl = { git = "https://github.com/prisma/prisma-engines.git", rev = "94a226b", features = ["all"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = "1"

[lints]
workspace = true
